  * Support for old T2 puppies was dropped
  * Debian/Ubuntu/etc multiarch versions are supported
  * Deleted some scripts that were deemed no longer appropriate.
  * Fixed some outdated templates
System:
- Cleanup and fixes for some core scripts such as
  rc.sysinit, rc.update, rc.shutdown, xwin, bootmanager, etc.
- New and simple xorgwizard
  * Dropped used of ddcprobe, which rendered the old xorg wizard unusable
  * There is a more generic xorg.conf template.
    This means xorg itself detects the video driver when it's running..
    xorg is wise enough to detect the correct video driver.
  * You can specify screen resolution/color depth with the new Xorg Video Wizard gui
  * There is a mechanism to install an alternative xorg on first boot
    if that xorg version has been included and puppy is configured
    to offer that option.
  * xorgwizard-cli now only offers xorg vesa, screen resolution change
    and an alternative xorg version.
  * You can still tweak xorg.conf to your liking
- Multiple Sound Card wizard
  * Now part of the base system
  * Completely rewritten for woofce
- sfs_load
  * Now part of the base system
  * sfs_load has been adapted for the new init
  * Boot Manager does not include code for the extrasfs's anymore
  * Now there is only one mechanism to load the extrasfs's: sfs_load
- underdog
  * Try the new underdog gui (for advanced users)
  * You will see it in Boot Manager after creating a pupsave in a frugal install
- pupswap
  * An automated method to create and load swapfiles
  * This only works if you don't have swap partitions
  * It will be called on first shutdown (gui/cli)
    if you don't have a swap partition.
  * In a full install, it will be shown on first boot
    if you don't have a swap partition.
  * Find it in Boot Manager
- new probedisk script
- Development scripts:
  * gitrepo: automatically set up a local repo of woofce
  * checkdeps /: for the puppy builders.. easy way to detect missing deps
- puppyinstaller
  * 