@@ -10,7 +10,7 @@
 # i18n gettext
 TEXTDOMAIN=clean_desk_icons
 export TEXTDOMAIN
-. /usr/bin/gettext.sh
+. gettext.sh
 
 export LANG=C
 . /etc/eventmanager #has RAMSAVEINTERVAL, ICONDESK, ICONPARTITIONS, HOTPLUGNOISY, HOTPLUGON, FLOPPYICON.
