@@ -1,0 +1,10 @@
+#!/bin/sh
+# - this script is to ensure a puppy always work properly
+#   even when the gettext binary is not present or has been deleted
+# - some people might not want to use gettext at all
+# - scripts may be faster by using this
+
+echo -n "$@"
+
+### END ###
+
