@@ -1,0 +1,21 @@
+#!/bin/sh
+# - this script is to ensure a puppy always works properly
+#   even when the ngettext binary is not present or has been deleted
+# - some people might not want to use gettext at all
+# - scripts may be faster by using this
+
+# needs 3-4 arguments
+
+[ "$5" ] && exit 1
+
+if [ "$4" ] ; then
+	echo -n "$3"
+	exit 0
+elif [ "$3" ] ; then
+	echo -n "$2"
+	exit 0
+fi
+
+exit 1
+
+### END ###
