@@ -37,7 +37,7 @@ else
  export OUTPUT_CHARSET=UTF-8
 fi
 
-. /usr/bin/gettext.sh # enables use of eval_gettext (several named variables) and ngettext (plurals)
+. gettext.sh # enables use of eval_gettext (several named variables) and ngettext (plurals)
 export TEXTDOMAIN=shutdownconfig
 T_title="$(gettext 'First shutdown: save session')" # used 8 times
 T_nosave="$(gettext 'No suitable partitions to save to. Shutting down without saving.')"
