@@ -84,5 +84,8 @@ System:
 - Development scripts:
   * gitrepo: automatically set up a local repo of woofce
   * checkdeps /: for the puppy builders.. easy way to detect missing deps
+- gettext is optional
+  * There are simple scripts in /usr/local/bin that get used
+    when gettext has not been installed or is missing files..
 - puppyinstaller
   * 
